--- a/cwpossel.ui
+++ b/cwpossel.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>684</width>
-    <height>607</height>
+    <height>610</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -390,12 +390,23 @@
             </property>
            </spacer>
           </item>
+          <item row="1" column="1">
+           <widget class="QPushButton" name="pushButton_11">
+            <property name="toolTip">
+             <string>Get time zone from system</string>
+            </property>
+            <property name="text">
+             <string>System TZ</string>
+            </property>
+           </widget>
+          </item>
          </layout>
          <zorder>doubleSpinBox_3</zorder>
          <zorder>radioButton_5</zorder>
          <zorder>radioButton_6</zorder>
          <zorder>pushButton_7</zorder>
          <zorder>horizontalSpacer_5</zorder>
+         <zorder>pushButton_11</zorder>
         </widget>
        </item>
        <item>
@@ -417,18 +428,15 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="2">
-           <spacer name="horizontalSpacer_6">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
+          <item row="0" column="1">
+           <widget class="QPushButton" name="pushButton_10">
+            <property name="toolTip">
+             <string>Get from 'Google API' (Current DST)</string>
             </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
+            <property name="text">
+             <string>Get...</string>
             </property>
-           </spacer>
+           </widget>
           </item>
           <item row="1" column="0">
            <spacer name="verticalSpacer_4">
@@ -443,13 +451,26 @@
             </property>
            </spacer>
           </item>
-          <item row="0" column="1">
-           <widget class="QPushButton" name="pushButton_10">
+          <item row="0" column="3">
+           <spacer name="horizontalSpacer_6">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="0" column="2">
+           <widget class="QPushButton" name="pushButton_12">
             <property name="toolTip">
-             <string>Get from 'Google API' (Current DST)</string>
+             <string>Get daylight saving from system</string>
             </property>
             <property name="text">
-             <string>Get...</string>
+             <string>System DST</string>
             </property>
            </widget>
           </item>
