--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -857,7 +857,7 @@
         <number>1</number>
        </property>
        <property name="currentIndex">
-        <number>1</number>
+        <number>4</number>
        </property>
        <property name="tabSpacing">
         <number>6</number>
@@ -867,7 +867,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>327</width>
+          <width>262</width>
           <height>387</height>
          </rect>
         </property>
@@ -1113,8 +1113,8 @@
         <property name="geometry">
          <rect>
           <x>0</x>
-          <y>-189</y>
-          <width>310</width>
+          <y>-206</y>
+          <width>302</width>
           <height>576</height>
          </rect>
         </property>
@@ -1611,7 +1611,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>350</width>
+          <width>413</width>
           <height>521</height>
          </rect>
         </property>
@@ -1904,7 +1904,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>327</width>
+          <width>264</width>
           <height>387</height>
          </rect>
         </property>
@@ -2356,8 +2356,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>327</width>
-          <height>387</height>
+          <width>268</width>
+          <height>402</height>
          </rect>
         </property>
         <attribute name="label">
@@ -2388,6 +2388,63 @@
               <bool>true</bool>
              </property>
             </widget>
+           </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_3">
+             <item>
+              <widget class="QToolButton" name="tb_m1">
+               <property name="text">
+                <string>1x</string>
+               </property>
+               <property name="checkable">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QToolButton" name="tb_m2">
+               <property name="text">
+                <string>2x</string>
+               </property>
+               <property name="checkable">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QToolButton" name="tb_m5">
+               <property name="text">
+                <string>5x</string>
+               </property>
+               <property name="checkable">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QToolButton" name="tb_m10">
+               <property name="text">
+                <string>10x</string>
+               </property>
+               <property name="checkable">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer_8">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+            </layout>
            </item>
            <item>
             <layout class="QHBoxLayout" name="horizontalLayout_6">
@@ -2480,7 +2537,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>327</width>
+          <width>279</width>
           <height>387</height>
          </rect>
         </property>
@@ -2685,7 +2742,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>310</width>
+          <width>237</width>
           <height>431</height>
          </rect>
         </property>
@@ -2788,7 +2845,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>327</width>
+          <width>254</width>
           <height>387</height>
          </rect>
         </property>
@@ -2936,7 +2993,7 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>327</width>
+          <width>468</width>
           <height>387</height>
          </rect>
         </property>
