--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -857,7 +857,7 @@
         <number>1</number>
        </property>
        <property name="currentIndex">
-        <number>4</number>
+        <number>2</number>
        </property>
        <property name="tabSpacing">
         <number>6</number>
@@ -1610,9 +1610,9 @@
         <property name="geometry">
          <rect>
           <x>0</x>
-          <y>0</y>
+          <y>-134</y>
           <width>413</width>
-          <height>521</height>
+          <height>527</height>
          </rect>
         </property>
         <attribute name="label">
@@ -1892,6 +1892,13 @@
              </property>
              <property name="checked">
               <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="pushButton_36">
+             <property name="text">
+              <string>PushButton</string>
              </property>
             </widget>
            </item>
@@ -3192,6 +3199,7 @@ p, li { white-space: pre-wrap; }
    <addaction name="actionFrame_field"/>
    <addaction name="actionCircle"/>
    <addaction name="actionText_2"/>
+   <addaction name="actionGeocentric"/>
   </widget>
   <widget class="QToolBar" name="tb_planets">
    <property name="windowTitle">
@@ -5091,6 +5099,14 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="toolTip">
     <string>Slew telescope to screen center</string>
+   </property>
+  </action>
+  <action name="actionGeocentric">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Geocentric</string>
    </property>
   </action>
  </widget>
