--- a/resource.qrc
+++ b/resource.qrc
@@ -141,5 +141,7 @@
         <file>res/ico_clipboard.png</file>
         <file>res/ico_printer.png</file>
         <file>res/ico_print_preview.png</file>
+        <file>res/ico_geo.png</file>
+        <file>res/ico_topo.png</file>
     </qresource>
 </RCC>
