--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1901,7 +1901,7 @@
               <bool>false</bool>
              </property>
              <property name="toolTip">
-              <string>Show event document.</string>
+              <string>Create report of event</string>
              </property>
              <property name="text">
               <string>Event Report...</string>
