--- a/cskeventdocdialog.ui
+++ b/cskeventdocdialog.ui
@@ -35,6 +35,9 @@
        <property name="text">
         <string>Colored</string>
        </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
