--- a/csetting.ui
+++ b/csetting.ui
@@ -4517,7 +4517,7 @@
            </layout>
           </widget>
          </item>
-         <item row="0" column="1">
+         <item row="0" column="2">
           <spacer name="horizontalSpacer_22">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
@@ -4542,6 +4542,29 @@
             </size>
            </property>
           </spacer>
+         </item>
+         <item row="0" column="1">
+          <widget class="QGroupBox" name="groupBox_32">
+           <property name="title">
+            <string>Moon ephemeris</string>
+           </property>
+           <layout class="QVBoxLayout" name="verticalLayout_103">
+            <item>
+             <widget class="QRadioButton" name="rb_mplan404">
+              <property name="text">
+               <string>PLAN404 - S .L. Moshier</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QRadioButton" name="rb_elp2000">
+              <property name="text">
+               <string>ELP2000 - Bureau des Longitudes</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </widget>
          </item>
         </layout>
        </item>
